* pheno:   Lua API: added IlDuca's and core's Lua API additions -
           et.G_EntitiesFree(), et.G_GetSpawnVar() and et.G_SetSpawnVar()
* pheno:   added core's fix for airstrike-cans getting kicked after plane
           knows its targets
* pheno:   added g_mode bitflag cvar (see docs)
* pheno:   added etpub_version console command
* pheno:   added redeye's XP overflow fix
* pheno:   satchel remains as long as the player was not gibbed
* pheno:   added logout referee command
* cs:      added Omni-bot 0.8 support
* pheno:   added core's mapvote fix. Thanks to NQ team.
* pheno:   fixed resetting *war modes on map changes

1.0.0
* cs:      added some fixes from gaoesa of silEnT team
* harald:  bans are now based on IP, guid and MAC address
* harald:  added g_spoofOptions for MAC spoofing
* harald:  banning 1 person without a guid doesn't cause all players without
           guid to be banned
* harald:  kick players with etpub client version mismatch when g_clientVersion
           is defined in server.cfg
* cs:      Lua API: added gaoesa's fix for sess.spectatorClient
* harald:  added g_panzerLevelUp for gaining 'Improved Projectile Resources'
           upgrade for panzers (etpro b_panzerLevelUp)
* pheno:   made XPSave and Shrubbot possible on PunkBuster disabled servers
* pheno:   Lua API: et_ClientBegin() is now ETPro compatible (called only once per map)
* pheno:   moved standard output of GeoIP and Lua API to console
* harald:  g_friendlyFireOpts 8 allows for FF on vehichles (ET_MOVER)
* pheno:   added g_unlockWeapons cvar for unlocking weapons per class (see docs)
* pheno:   removed g_mode cvar and added flags 2048 (instant spawn), 4096 (adrenaline) and
           8192 (no damage) to g_misc cvar (see docs)
* pheno:   added server gameplay cvar change announcement
* pheno:   fixed a bug where gameplay cvar changes wasn't announced
* pheno:   added client side hitsound handling (NOTE: only available with installed
           etpub client > 20100628)