@@ -385,11 +385,12 @@ void CG_CheckLocalSounds( playerState_t *ps, playerState_t *ops ) {
 		}
 	}
 
-	// pheno: hitsound handling
+	// pheno: hitsound handling (available with server > 0.9.1)
 	if (cg_hitSounds.integer == 1 &&
-		cgs.etpub > ETPUB_VERSION(0,9,1) &&
+		ps->persistant[PERS_HITS] != ops->persistant[PERS_HITS] &&
 		ps->persistant[PERS_HITS] != 0 && // fix hitsound on PERS_HITS reset
-		ps->persistant[PERS_HITS] != ops->persistant[PERS_HITS]) {
+		ps->persistant[PERS_HITSOUND] && // fix hitsound after disabling hitsounds with console command
+		cgs.etpub > ETPUB_VERSION(0,9,1)) {
 		trap_S_StartSound(NULL, ps->clientNum, CHAN_AUTO, cgs.media.hitSound[ps->persistant[PERS_HITSOUND]]);
 	}
 
